# haskell-voting

./: haskell-voting.cabal
src/Voting/: Approval.hs
src/Voting/Ranked/: Borda.hs  IRV.hs  Types.hs
src/Voting/Rating/: RandFair.hs  Range.hs  Types.hs
