name:                haskell-voting
version:             0.1.0.0
synopsis:            Haskell implementations of common voting algorithms.
description:         Please see README.md
homepage:            http://github.com/nuttycom/haskell-voting#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Kris Nuttycombe
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src

  exposed-modules:     Voting.Ranked.Types
                     , Voting.Ranked.Borda
                     , Voting.Ranked.IRV
                     , Voting.Rating.Types
                     , Voting.Rating.Range
                     , Voting.Rating.RandFair

  build-depends:       base         >= 4.7 && < 5
                     , mtl          >= 2.2 && < 3
                     , containers   >= 0.5 && < 1
                     , semigroups   >= 0.18 
                     , MonadRandom
                     , lens         >= 4.3 && < 5


test-suite haskell-voting-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-voting
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nuttycom/haskell-voting
